--- a/src/library.html
+++ b/src/library.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Filmoteka</title>
+    <title>My library</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,26 +16,24 @@
   <body data-page>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
 
-    <!-- Dev-01 -->
-    <include src="./partials/header.html"></include>
+    <!-- Developers-?? -->
+    <include src="./partials/library-header.html"></include>
 
     <main>
       <!-- Developers-?? -->
-      <include src="./partials/movies.html"></include>
+      <include src="./partials/library-movies.html"></include>
       <include src="./partials/loader.html"></include>
-      <include src="./partials/pagination.html"></include>
     </main>
 
     <!-- Kyrylo Dovgalin  -->
     <include src="./partials/footer.html"></include>
 
-    <!-- Developers-??  -->
+    <!-- Developers-???  -->
     <include src="./partials/modal.html"></include>
-
     <include src="./partials/modal-group.html"></include>
     <include src="./partials/sign-in.html"></include>
 
     <!-- ❗️❗️❗️Script -->
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./library.js"></script>
   </body>
 </html>
